LIST OF CHANGES
---------------

release 49.2.1
 - to avaid deprication warnings in Config::Any,
   ensure XS extensions are available for YAML and JSON

release 49.2
 - test updates only

release 49.1
 - remove 'move_to_outgoing' step from function list for qc runs

release 49.0
 - run the archival pipeline entirely in the directory where it was started, ie
   do not move the runnfolder to outgoing; this will be done by the staging
   monitor

release 48.9
 - run illumina analysis loader in a lowload lsf queue

release 48.8
 - pipeline daemon - when calling the pipeline, do not use paths that are local to the host

release 48.7
 - generate  fastqcheck files for empty fastq files explicitly without
   running fastqcheck executable, which is not available on gseq cluster
 - daemon to process a run if machine location is unknown

release 48.6
 - force gclp analysis along the p4 route

release 48.5
 - archive to a "gclp" iRODS if function_list looks like gclp variant
 - use low_load queue for upstream_tags qc (accesses tracking and qc DBs)

release 48.4
 - Make group to change analysis directories to optional
 - use LSB_BIND_CPU_LIST over LSB_MCPU_HOSTS to determine number of threads to use
   within a job (cope with hyperthreading where LSF gives one slot to what is presented
   as two cpu - this will try to make use of apparent CPUs)
 - make number of slots used by seq_alignment configurable
 - allow running on file server by
   + use npg_tracking::util::abs_path to patch absolute paths
   + avoid perl chdir to give job working dir
 - drop not_strip_bam_tag option, explicitly disable bam tag stripping in seq_alignment
 - add daemon.ini and optionally add command_prefix to commands
 - use lowload lsf queue
 - seqchksum_comparator to cope with higher plexing (with a chdir)
 - force HiSeq rapid run V2 flowcells (BCXX suffix) to use p4
 - enable p4 single-end processing (bwa mem only, not RNA or non-consented human split)

release 48.3